<resources>
    <string name="app_name">Notes_Assignment_q4</string>
    <string name="enter_title">Enter title</string>
    <string name="enter_content">Enter content</string>
    <string name="delete">delete</string>
    <string name="update">update</string>
    <string name="save">save</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>